rental-recommender/rental-recommender-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rental-recommender
  name: rental-recommender
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: rental-recommender
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rental-recommender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rental-recommender
  template:
    metadata:
      labels:
        app: rental-recommender
    spec:
      containers:
      - image: localhost:5000/rental-recommender:1.0
        name: rental-recommender
        ports:
        - containerPort: 8000
        args: ["uvicorn", "app:app", "--host", "0.0.0.0"]
        resources:
          limits:
            nvidia.com/gpu: 1
        imagePullPolicy: Always
      dnsPolicy: ClusterFirst
      restartPolicy: Always
